Schedule workspace repaint when window leaves current desktop

When a window leaves the current virtual desktop, we need to schedule a
workspace repaint so the compositor repaints the old region of the
window on the current desktop.

In hindsight, the scene graph must schedule a repaint, but it's not
doable with the current effects api, it will be changed with future
refactoring changes.

BUG: 444172


(cherry picked from commit a4bb3896bfeb716efebd768404915f0414c65068)